--- a/secret2-97439.html
+++ b/secret2-97439.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Secret1 (hint there's more)</title>
+  <title>Secret2 (This is the last secret, im lazy.</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   
 </head>
