--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
   <tr><td><center><a href=https://www.youtube.com/><button class="button button1">YOUTUBE</button></a></center></td></tr>
     
-    <tr><td><center><a href=form.html><button class="button button1">FORM</button></a></center></td></tr>
+    <tr><td><center><a href=form.html><button class="button button1">QUIZ</button></a></center></td></tr>
 
     <tr><td><center><a href=game.html><button class="button button1">GAME</button></a></center></td></tr>
   </table>
