--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     Genius Hour Project
   </h2>
   
-  <table>
+  <center>
+    <table>
     <tr><td><center><a href=home.html><button class="button button1">PROJECT</button></a></center></td></tr>
     
   <tr><td><center><a href=https://www.youtube.com/><button class="button button1">YOUTUBE</button></a></center></td></tr>
@@ -33,6 +34,7 @@
 
     <tr><td><center><a href=game.html><button class="button button1">GAME</button></a></center></td></tr>
   </table>
+  </center>
 
   <tr><td><center><a href=secret1-83479.html><button class="buttonsecret buttonsecret1">SECRET!</button></a></center></td></tr>
   
