--- a/indexx.html
+++ b/indexx.html
@@ -24,6 +24,7 @@
     Genius Hour Project
   </h2>
   
+  <center>
   <table>
     <tr><td><center><a href=home.html><button class="button button1">PROJECT</button></a></center></td></tr>
     
@@ -33,6 +34,7 @@
 
     <tr><td><center><a href=gamee.html><button class="button button1">GAME</button></a></center></td></tr>
   </table>
+  </center>
   
 </body>
   
